# scyllarest

./: Cargo.toml  README.md  TODO.md
src/: client.rs  lib.rs  main.rs
src/methods/: mod.rs
src/query/: mod.rs
src/query/filters/: mod.rs
src/query/operators/: mod.rs
