[package]
name = "scyllarest"
version = "0.1.0"
edition = "2021"
authors = ["floris@xylex.ai"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.13"
tokio = {version = "1.37.0", features = ["full"]}
serde = "1.0.203"
serde_json = "1.0.117"
uuid = "1.8.0"
actix-web = "4.8.0"
dotenv = "0.15.0"
anyhow = "1.0.86"
